fix navbar expand and alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,23 @@
+html,
+body {
+    height: 100%;
+    font-size: 1rem;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .hidden {
     display: none;
+}
+
+.card-container {
+    margin-top: 10rem;
+}
+
+.btn-nav{
+    margin-right: .5rem;
 }
